--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ethers": "^6.13.2",
+    "next": "14.2.5",
+    "peerjs": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "webrtc-adapter": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
+    "@types/peerjs": "^0.0.30",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "typescript": "^5"
   }
 }
